# Glex2

./: .travis.yml  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  build  compile  config.guess  config.h  config.status  config.sub  configure  configure.ac  depcomp  install-sh  libtool  ltmain.sh  missing
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
shaders/: Makefile
src/: BoundingBox.cc  BoundingBox.h  Camera.cc  Camera.h  ColourManager.h  CubeAsset.cc  GameAsset.cc  GameAsset.h  GameAssetManager.cc  GameAssetManager.h  GameWorld.cc  GameWorld.h  Makefile  Makefile.am  Makefile.in  PythonBindings.cc  PythonBindings.h  bosscube  camera.h  common.h  cube.cpp  cube.h  endcube  gamemanager.h  main.cc  main.cpp  shader.cpp  shader.h  shaderexample  transform.h  window.cpp  window.h
src/.deps/: BoundingBox.Plo  BoundingBox.Po  Camera.Plo  Camera.Po  ColourManager.Plo  ColourManager.Po  CubeAsset.Plo  CubeAsset.Po  GameAsset.Plo  GameAsset.Po  GameAssetManager.Plo  GameAssetManager.Po  GameWorld.Plo  GameWorld.Po  GroundAsset.Po  PythonBindings.Tpo  StarAsset.Po  cube.Po  game.Po  gamemanager.Po  main.Po  shader.Po  window.Po
src/res/: Makefile  Makefile.am  Makefile.in  redcube.fs  redcube.vs  whitecube.fs
